--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.3.5"
 test-case = "2.1.0"
+
+[[bench]]
+name = "sort_benchmark"
+harness = false
