--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = "0.3.5"
+pretty_assertions = "1.2.1"
 test-case = "2.1.0"
 
 [[bench]]
