--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ pretty_assertions = "1.2.1"
 test-case = "2.1.0"
 
 [[bench]]
-name = "sort_benchmark"
+name = "sorting_benchmark"
 harness = false
